

# ===================================================================
# オプション
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories (
  ${PROJECT_SOURCE_DIR}/ym-verilog/c++-src/parser/scanner
  ../include
  )


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================



# ===================================================================
#  ソースファイルの設定
# ===================================================================


# ===================================================================
#  テスト用のターゲットの設定
# ===================================================================

add_executable ( lex_test
  main.cc
  rawlex_mode.cc
  lex_mode.cc
  ../common/VlTestLineWatcher.cc
  $<TARGET_OBJECTS:ym_verilog_obj_d>
  $<TARGET_OBJECTS:ym_cell_obj_d>
  $<TARGET_OBJECTS:ym_logic_obj_d>
  $<TARGET_OBJECTS:ym_base_obj_d>
  )

target_compile_options ( lex_test
  PRIVATE "-g"
  )

target_link_libraries ( lex_test
  ${YM_LIB_DEPENDS}
  )
